# dogv2_mujoco

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.py  plot_record.py  pyproject.toml  run.sh
models/: cross_stairs.xml  dog_v2.xml  dog_v2_2_4.xml  dog_v2_hurdle.xml  imgs
policy/cts/: config.yaml
policy/cts_onnx/: config.yaml
policy/dogv2_gait_onnx/: config.yaml
policy/dreamwaq_onnx/: config.yaml
policy/parkour_hurdle_onnx/: config.yaml
scripts/: download_libtorch.sh  download_mujoco.sh  download_onnxruntime.sh  export_onnx.py
src/: fsm_dog_v2.hpp  main.cpp  sim_mujoco.hpp
src/core/: inference_runtime.cpp  rl_sdk.cpp  rl_sdk.hpp
